// Vitest Snapshot v1

exports[`core/Engine > constructor > cache exists, \`useCache\` is \`true\`, \`restartOnReload\` is \`true\` 1`] = `null`;

exports[`core/Engine > constructor > cache is enabled, cache exists 1`] = `
{
  "fields": [
    null,
  ],
  "id": "second",
  "status": "initial",
}
`;

exports[`core/Engine > constructor > cache is enabled, cache exists, \`autoFill\` is \`false\` 1`] = `
{
  "fields": [
    null,
  ],
  "id": "second",
  "status": "initial",
}
`;

exports[`core/Engine > deepCompare 1`] = `[]`;

exports[`core/Engine > deepCompare 2`] = `
{
  "component": "Null",
  "componentProps": {},
  "id": "field1",
  "status": "initial",
  "value": "test",
}
`;

exports[`core/Engine > deepCompare 3`] = `
[
  {
    "data": null,
    "path": "root.0.field1.1.key",
    "type": "input",
  },
  {
    "data": "new2",
    "path": "root.0.field1.2.key",
    "type": "input",
  },
  {
    "data": 2022-07-07T11:12:51.401Z,
    "path": "root.0.field1.2.key2",
    "type": "input",
  },
  {
    "data": "ok",
    "path": "root.0.field1.3.key3.__",
    "type": "input",
  },
]
`;

exports[`core/Engine > deepCompare 4`] = `
{
  "component": "Null",
  "componentProps": {},
  "fieldIds": [
    "0",
    "1",
    "2",
    "3",
  ],
  "fields": [
    {
      "component": "Null",
      "componentProps": {},
      "fieldIds": [
        "key",
        "key2",
        "key3",
      ],
      "fields": [
        {
          "component": "Null",
          "componentProps": {},
          "id": "key",
          "status": "success",
          "value": "test0",
        },
        {
          "component": "Null",
          "componentProps": {},
          "id": "key2",
          "status": "initial",
          "value": 2022-07-07T11:12:51.401Z,
        },
        null,
      ],
      "id": "0",
      "status": "success",
      "value": {
        "key": "test0",
      },
    },
    {
      "component": "Null",
      "componentProps": {},
      "fieldIds": [
        "key",
        "key2",
        "key3",
      ],
      "fields": [
        {
          "component": "Null",
          "componentProps": {},
          "id": "key",
          "status": "success",
          "value": "test1",
        },
        null,
        null,
      ],
      "id": "1",
      "status": "success",
      "value": {
        "key": "test1",
      },
    },
    {
      "component": "Null",
      "componentProps": {},
      "fieldIds": [
        "key",
        "key2",
        "key3",
      ],
      "fields": [
        {
          "component": "Null",
          "componentProps": {},
          "id": "key",
          "status": "success",
          "value": "test2",
        },
        {
          "component": "Null",
          "componentProps": {},
          "id": "key2",
          "status": "initial",
          "value": null,
        },
        {
          "component": "Null",
          "componentProps": {},
          "fieldIds": [],
          "fields": [],
          "id": "key3",
          "status": "initial",
          "value": {
            "__": "test2",
          },
        },
      ],
      "id": "2",
      "status": "success",
      "value": {
        "key": "test2",
      },
    },
    {
      "component": "Null",
      "componentProps": {},
      "fieldIds": [
        "key",
        "key2",
        "key3",
      ],
      "fields": [
        {
          "component": "Null",
          "componentProps": {},
          "id": "key",
          "status": "success",
          "value": "test3",
        },
        {
          "component": "Null",
          "componentProps": {},
          "id": "key2",
          "status": "initial",
          "value": null,
        },
        {
          "component": "Null",
          "componentProps": {},
          "fieldIds": [
            "__",
          ],
          "fields": [
            {
              "component": "Null",
              "componentProps": {},
              "id": "__",
              "status": "initial",
              "value": "test3",
            },
          ],
          "id": "key3",
          "status": "initial",
          "value": {
            "__": "test3",
          },
        },
      ],
      "id": "3",
      "status": "success",
      "value": {
        "key": "test3",
      },
    },
  ],
  "id": "field1",
  "status": "initial",
  "value": [
    {
      "key": "test0",
      "key2": 2022-07-07T11:12:51.401Z,
    },
    {
      "key": "test1",
      "key3": {
        "__": "test2",
      },
    },
    {
      "key": "test2",
      "key3": {
        "__": "test3",
      },
    },
  ],
}
`;

exports[`core/Engine > getConfiguration 1`] = `
{
  "root": "root",
  "steps": {
    "root": {
      "fields": {
        "conditionalArray": {
          "component": "Array",
          "componentProps": {
            "minItems": 3,
          },
          "fields": {
            "component": "Array",
            "componentProps": {
              "minItems": 2,
            },
            "fields": {
              "component": "String",
              "messages": {
                "required": "REQUIRED",
                "validation": [Function],
              },
              "renderCondition": [Function],
              "required": true,
              "type": "string",
            },
            "type": "array",
          },
          "messages": {
            "validation": [Function],
          },
          "renderCondition": [Function],
          "type": "array",
        },
        "integerCondition": {
          "component": "Integer",
          "renderCondition": [Function],
          "type": "integer",
        },
        "message": {
          "component": "Message",
          "type": "null",
        },
        "nestedArray": {
          "component": "Array",
          "fields": {
            "component": "Array",
            "fields": {
              "component": "String",
              "messages": {
                "required": "REQUIRED",
                "validation": [Function],
              },
              "required": true,
              "type": "string",
            },
            "messages": {
              "required": "REQUIRED",
              "validation": [Function],
            },
            "required": true,
            "type": "array",
          },
          "messages": {
            "required": "ARRAY REQUIRED",
            "validation": [Function],
          },
          "required": true,
          "type": "array",
        },
        "nestedDynamicObject": {
          "component": "Object",
          "fields": {
            "^[0-9]+$": {
              "component": "Object",
              "fields": {
                "integer": {
                  "component": "Integer",
                  "type": "integer",
                },
              },
              "type": "object",
            },
            "^[a-z]+$": {
              "component": "Object",
              "fields": {
                "string": {
                  "component": "String",
                  "type": "string",
                },
              },
              "type": "object",
            },
          },
          "type": "dynamicObject",
        },
        "nestedObject": {
          "component": "Object",
          "fields": {
            "object": {
              "component": "Object",
              "fields": {
                "string": {
                  "component": "String",
                  "type": "string",
                },
              },
              "required": true,
              "type": "object",
            },
          },
          "type": "object",
        },
        "stringCondition": {
          "component": "String",
          "defaultValue": "ok",
          "messages": {
            "validation": [Function],
          },
          "type": "string",
        },
        "stringRequired": {
          "component": "String",
          "required": true,
          "type": "string",
        },
        "submit": {
          "component": "Array",
          "fields": {
            "component": "Button",
            "submit": true,
            "type": "boolean",
          },
          "type": "array",
        },
      },
      "nextStep": [Function],
      "submit": true,
    },
    "second": {
      "fields": {
        "submit": {
          "component": "Button",
          "type": "boolean",
        },
      },
    },
  },
}
`;

exports[`core/Engine > getConfiguration 2`] = `
{
  "component": "Array",
  "fields": {
    "component": "String",
    "messages": {
      "required": "REQUIRED",
      "validation": [Function],
    },
    "required": true,
    "type": "string",
  },
  "messages": {
    "required": "REQUIRED",
    "validation": [Function],
  },
  "required": true,
  "type": "array",
}
`;

exports[`core/Engine > getConfiguration 3`] = `
{
  "component": "Object",
  "fields": {
    "integer": {
      "component": "Integer",
      "type": "integer",
    },
  },
  "type": "object",
}
`;

exports[`core/Engine > getConfiguration 4`] = `
{
  "component": "Object",
  "fields": {
    "string": {
      "component": "String",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`core/Engine > getField 1`] = `
{
  "component": "Array",
  "componentProps": {},
  "fieldIds": [],
  "fields": [],
  "id": "submit",
  "label": undefined,
  "status": "initial",
  "value": null,
}
`;

exports[`core/Engine > getField 2`] = `null`;

exports[`core/Engine > getField 3`] = `
{
  "component": "Null",
  "componentProps": {},
  "fieldIds": [
    "integer",
  ],
  "fields": [
    {
      "component": "Null",
      "componentProps": {},
      "id": "integer",
      "status": "initial",
    },
  ],
  "id": "123",
  "status": "initial",
}
`;

exports[`core/Engine > getField 4`] = `
{
  "component": "Null",
  "componentProps": {},
  "fieldIds": [
    "string",
  ],
  "fields": [
    {
      "component": "Null",
      "componentProps": {},
      "id": "string",
      "status": "initial",
    },
  ],
  "id": "test",
  "status": "initial",
}
`;

exports[`core/Engine > getSteps 1`] = `
[
  {
    "fields": [
      {
        "component": "Message",
        "componentProps": {},
        "id": "message",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "String",
        "componentProps": {},
        "id": "stringRequired",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Array",
        "componentProps": {},
        "fieldIds": [],
        "fields": [],
        "id": "nestedArray",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "String",
        "componentProps": {},
        "id": "stringCondition",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Integer",
        "componentProps": {},
        "id": "integerCondition",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      null,
      {
        "component": "Object",
        "componentProps": {},
        "fieldIds": [
          "object",
        ],
        "fields": [
          {
            "component": "Object",
            "componentProps": {},
            "fieldIds": [
              "string",
            ],
            "fields": [
              {
                "component": "String",
                "componentProps": {},
                "id": "string",
                "label": undefined,
                "status": "initial",
                "value": null,
              },
            ],
            "id": "object",
            "label": undefined,
            "status": "initial",
            "value": null,
          },
        ],
        "id": "nestedObject",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Object",
        "componentProps": {},
        "fieldIds": [],
        "fields": [],
        "id": "nestedDynamicObject",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Array",
        "componentProps": {},
        "fieldIds": [],
        "fields": [],
        "id": "submit",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
    ],
    "id": "root",
    "index": 0,
    "status": "initial",
  },
]
`;

exports[`core/Engine > handleUserAction - validation on submit 1`] = `
[
  {
    "fields": [
      {
        "component": "Message",
        "componentProps": {},
        "id": "message",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "String",
        "componentProps": {},
        "id": "stringRequired",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Array",
        "componentProps": {},
        "fieldIds": [],
        "fields": [],
        "id": "nestedArray",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "String",
        "componentProps": {},
        "id": "stringCondition",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Integer",
        "componentProps": {},
        "id": "integerCondition",
        "label": undefined,
        "status": "progress",
        "value": 1,
      },
      null,
      {
        "component": "Object",
        "componentProps": {},
        "fieldIds": [
          "object",
        ],
        "fields": [
          {
            "component": "Object",
            "componentProps": {},
            "fieldIds": [
              "string",
            ],
            "fields": [
              {
                "component": "String",
                "componentProps": {},
                "id": "string",
                "label": undefined,
                "status": "initial",
                "value": null,
              },
            ],
            "id": "object",
            "label": undefined,
            "status": "initial",
            "value": null,
          },
        ],
        "id": "nestedObject",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Object",
        "componentProps": {},
        "fieldIds": [],
        "fields": [],
        "id": "nestedDynamicObject",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Array",
        "componentProps": {},
        "fieldIds": [],
        "fields": [],
        "id": "submit",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
    ],
    "id": "root",
    "index": 0,
    "status": "progress",
  },
]
`;

exports[`core/Engine > handleUserAction 1`] = `
[
  {
    "fields": [
      {
        "component": "Message",
        "componentProps": {},
        "id": "message",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "String",
        "componentProps": {},
        "id": "stringRequired",
        "label": undefined,
        "message": undefined,
        "status": "error",
        "value": "",
      },
      {
        "component": "Array",
        "componentProps": {},
        "fieldIds": [],
        "fields": [],
        "id": "nestedArray",
        "label": undefined,
        "message": "ARRAY REQUIRED",
        "status": "error",
        "value": null,
      },
      {
        "component": "String",
        "componentProps": {},
        "id": "stringCondition",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Integer",
        "componentProps": {},
        "id": "integerCondition",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      null,
      {
        "component": "Object",
        "componentProps": {},
        "fieldIds": [
          "object",
        ],
        "fields": [
          {
            "component": "Object",
            "componentProps": {},
            "fieldIds": [
              "string",
            ],
            "fields": [
              {
                "component": "String",
                "componentProps": {},
                "id": "string",
                "label": undefined,
                "status": "initial",
                "value": null,
              },
            ],
            "id": "object",
            "label": undefined,
            "message": undefined,
            "status": "error",
            "value": null,
          },
        ],
        "id": "nestedObject",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Object",
        "componentProps": {},
        "fieldIds": [],
        "fields": [],
        "id": "nestedDynamicObject",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Array",
        "componentProps": {},
        "fieldIds": [
          "0",
        ],
        "fields": [
          {
            "component": "Button",
            "componentProps": {},
            "id": "0",
            "label": undefined,
            "message": undefined,
            "status": "success",
            "value": true,
          },
        ],
        "id": "submit",
        "label": undefined,
        "message": undefined,
        "status": "success",
        "value": [
          true,
        ],
      },
    ],
    "id": "root",
    "index": 0,
    "status": "error",
  },
]
`;

exports[`core/Engine > handleUserAction 2`] = `
[
  {
    "fields": [
      {
        "component": "Message",
        "componentProps": {},
        "id": "message",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "String",
        "componentProps": {},
        "id": "stringRequired",
        "label": undefined,
        "message": undefined,
        "status": "error",
        "value": null,
      },
      {
        "component": "Array",
        "componentProps": {},
        "fieldIds": [],
        "fields": [],
        "id": "nestedArray",
        "label": undefined,
        "message": "ARRAY REQUIRED",
        "status": "error",
        "value": null,
      },
      {
        "component": "String",
        "componentProps": {},
        "id": "stringCondition",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Integer",
        "componentProps": {},
        "id": "integerCondition",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      null,
      {
        "component": "Object",
        "componentProps": {},
        "fieldIds": [
          "object",
        ],
        "fields": [
          {
            "component": "Object",
            "componentProps": {},
            "fieldIds": [
              "string",
            ],
            "fields": [
              {
                "component": "String",
                "componentProps": {},
                "id": "string",
                "label": undefined,
                "status": "initial",
                "value": null,
              },
            ],
            "id": "object",
            "label": undefined,
            "message": undefined,
            "status": "error",
            "value": null,
          },
        ],
        "id": "nestedObject",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Object",
        "componentProps": {},
        "fieldIds": [],
        "fields": [],
        "id": "nestedDynamicObject",
        "label": undefined,
        "status": "initial",
        "value": null,
      },
      {
        "component": "Array",
        "componentProps": {},
        "fieldIds": [
          "0",
        ],
        "fields": [
          {
            "component": "Button",
            "componentProps": {},
            "id": "0",
            "label": undefined,
            "message": undefined,
            "status": "success",
            "value": true,
          },
        ],
        "id": "submit",
        "label": undefined,
        "message": undefined,
        "status": "success",
        "value": [
          true,
        ],
      },
    ],
    "id": "root",
    "index": 0,
    "status": "success",
  },
  {
    "fields": [
      {
        "component": "Button",
        "componentProps": {},
        "id": "submit",
        "label": undefined,
        "status": "initial",
        "value": [
          true,
        ],
      },
    ],
    "id": "second",
    "index": 1,
    "status": "initial",
  },
]
`;

exports[`core/Engine > setVariables 1`] = `
{
  "nested": {
    "test": "ok",
  },
  "newTest": true,
}
`;

exports[`core/Engine > setVariables 2`] = `
[
  "gincko_cache",
  {
    "steps": [
      {
        "fields": [
          {
            "component": "Message",
            "componentProps": {},
            "id": "message",
            "label": undefined,
            "status": "initial",
            "value": null,
          },
          {
            "component": "String",
            "componentProps": {},
            "id": "stringRequired",
            "label": undefined,
            "status": "initial",
            "value": null,
          },
          {
            "component": "Array",
            "componentProps": {},
            "fieldIds": [],
            "fields": [],
            "id": "nestedArray",
            "label": undefined,
            "status": "initial",
            "value": null,
          },
          {
            "component": "String",
            "componentProps": {},
            "id": "stringCondition",
            "label": undefined,
            "status": "initial",
            "value": null,
          },
          null,
          null,
          {
            "component": "Object",
            "componentProps": {},
            "fieldIds": [
              "object",
            ],
            "fields": [
              {
                "component": "Object",
                "componentProps": {},
                "fieldIds": [
                  "string",
                ],
                "fields": [
                  {
                    "component": "String",
                    "componentProps": {},
                    "id": "string",
                    "label": undefined,
                    "status": "initial",
                    "value": null,
                  },
                ],
                "id": "object",
                "label": undefined,
                "status": "initial",
                "value": null,
              },
            ],
            "id": "nestedObject",
            "label": undefined,
            "status": "initial",
            "value": null,
          },
          {
            "component": "Object",
            "componentProps": {},
            "fieldIds": [],
            "fields": [],
            "id": "nestedDynamicObject",
            "label": undefined,
            "status": "initial",
            "value": null,
          },
          {
            "component": "Array",
            "componentProps": {},
            "fieldIds": [],
            "fields": [],
            "id": "submit",
            "label": undefined,
            "status": "initial",
            "value": null,
          },
        ],
        "id": "root",
        "status": "progress",
      },
    ],
    "userInputs": {
      "integerCondition": 3,
    },
    "variables": {
      "nested": {
        "test": "ok",
      },
      "newTest": true,
    },
  },
]
`;

exports[`core/Engine > setVariables 3`] = `
{
  "fields": [
    {
      "component": "Message",
      "componentProps": {},
      "id": "message",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringRequired",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedArray",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    null,
    null,
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [
        "object",
      ],
      "fields": [
        {
          "component": "Object",
          "componentProps": {},
          "fieldIds": [
            "string",
          ],
          "fields": [
            {
              "component": "String",
              "componentProps": {},
              "id": "string",
              "label": undefined,
              "status": "initial",
              "value": null,
            },
          ],
          "id": "object",
          "label": undefined,
          "status": "initial",
          "value": null,
        },
      ],
      "id": "nestedObject",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedDynamicObject",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "submit",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
  ],
  "id": "root",
  "status": "progress",
}
`;

exports[`core/Engine > setVariables 4`] = `
{
  "fields": [
    {
      "component": "Message",
      "componentProps": {},
      "id": "message",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringRequired",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedArray",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Integer",
      "componentProps": {},
      "id": "integerCondition",
      "label": undefined,
      "status": "initial",
      "value": 3,
    },
    null,
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [
        "object",
      ],
      "fields": [
        {
          "component": "Object",
          "componentProps": {},
          "fieldIds": [
            "string",
          ],
          "fields": [
            {
              "component": "String",
              "componentProps": {},
              "id": "string",
              "label": undefined,
              "status": "initial",
              "value": null,
            },
          ],
          "id": "object",
          "label": undefined,
          "status": "initial",
          "value": null,
        },
      ],
      "id": "nestedObject",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedDynamicObject",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "submit",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
  ],
  "id": "root",
  "status": "progress",
}
`;

exports[`core/Engine > toggleFields 1`] = `
{
  "fields": [
    {
      "component": "Message",
      "componentProps": {},
      "id": "message",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringRequired",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedArray",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Integer",
      "componentProps": {},
      "id": "integerCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    null,
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [
        "object",
      ],
      "fields": [
        {
          "component": "Object",
          "componentProps": {},
          "fieldIds": [
            "string",
          ],
          "fields": [
            {
              "component": "String",
              "componentProps": {},
              "id": "string",
              "label": undefined,
              "status": "initial",
              "value": null,
            },
          ],
          "id": "object",
          "label": undefined,
          "status": "initial",
          "value": null,
        },
      ],
      "id": "nestedObject",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedDynamicObject",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "submit",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
  ],
  "id": "root",
  "index": 0,
  "status": "initial",
}
`;

exports[`core/Engine > toggleFields 2`] = `
{
  "fields": [
    {
      "component": "Message",
      "componentProps": {},
      "id": "message",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringRequired",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedArray",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Integer",
      "componentProps": {},
      "id": "integerCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    null,
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [
        "object",
      ],
      "fields": [
        {
          "component": "Object",
          "componentProps": {},
          "fieldIds": [
            "string",
          ],
          "fields": [
            {
              "component": "String",
              "componentProps": {},
              "id": "string",
              "label": undefined,
              "status": "initial",
              "value": "HOLA",
            },
          ],
          "id": "object",
          "label": undefined,
          "status": "initial",
          "value": {
            "string": "HOLA",
          },
        },
      ],
      "id": "nestedObject",
      "label": undefined,
      "status": "initial",
      "value": {
        "object": {
          "string": "HOLA",
        },
      },
    },
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedDynamicObject",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "submit",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
  ],
  "id": "root",
  "index": 0,
  "status": "initial",
}
`;

exports[`core/Engine > toggleFields 3`] = `
{
  "fields": [
    {
      "component": "Message",
      "componentProps": {},
      "id": "message",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringRequired",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [
        {
          "component": "Array",
          "componentProps": {},
          "fieldIds": [],
          "fields": [],
          "id": "0",
          "label": undefined,
          "status": "initial",
          "value": null,
        },
      ],
      "id": "nestedArray",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Integer",
      "componentProps": {},
      "id": "integerCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    null,
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [
        "object",
      ],
      "fields": [
        {
          "component": "Object",
          "componentProps": {},
          "fieldIds": [
            "string",
          ],
          "fields": [
            {
              "component": "String",
              "componentProps": {},
              "id": "string",
              "label": undefined,
              "status": "initial",
              "value": "HOLA",
            },
          ],
          "id": "object",
          "label": undefined,
          "status": "initial",
          "value": {
            "string": "HOLA",
          },
        },
      ],
      "id": "nestedObject",
      "label": undefined,
      "status": "initial",
      "value": {
        "object": {
          "string": "HOLA",
        },
      },
    },
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedDynamicObject",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "submit",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
  ],
  "id": "root",
  "index": 0,
  "status": "initial",
}
`;

exports[`core/Engine > toggleFields 4`] = `
{
  "fields": [
    {
      "component": "Message",
      "componentProps": {},
      "id": "message",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringRequired",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [
        {
          "component": "Array",
          "componentProps": {},
          "fieldIds": [],
          "fields": [],
          "id": "0",
          "label": undefined,
          "status": "initial",
          "value": null,
        },
      ],
      "id": "nestedArray",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Integer",
      "componentProps": {},
      "id": "integerCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    null,
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [
        "object",
      ],
      "fields": [
        {
          "component": "Object",
          "componentProps": {},
          "fieldIds": [
            "string",
          ],
          "fields": [
            {
              "component": "String",
              "componentProps": {},
              "id": "string",
              "label": undefined,
              "status": "initial",
              "value": "HOLA",
            },
          ],
          "id": "object",
          "label": undefined,
          "status": "initial",
          "value": {
            "string": "HOLA",
          },
        },
      ],
      "id": "nestedObject",
      "label": undefined,
      "status": "initial",
      "value": {
        "object": {
          "string": "HOLA",
        },
      },
    },
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [],
      "fields": [
        {
          "component": "Object",
          "componentProps": {},
          "fieldIds": [
            "string",
          ],
          "fields": [
            {
              "component": "String",
              "componentProps": {},
              "id": "string",
              "label": undefined,
              "status": "initial",
              "value": null,
            },
          ],
          "id": "undefined",
          "label": undefined,
          "status": "initial",
          "value": null,
        },
      ],
      "id": "nestedDynamicObject",
      "label": undefined,
      "status": "initial",
      "value": {},
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "submit",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
  ],
  "id": "root",
  "index": 0,
  "status": "initial",
}
`;

exports[`core/Engine > validateFields 1`] = `
{
  "fields": [
    {
      "component": "Message",
      "componentProps": {},
      "id": "message",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringRequired",
      "label": undefined,
      "message": undefined,
      "status": "error",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedArray",
      "label": undefined,
      "message": "ARRAY REQUIRED",
      "status": "error",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Integer",
      "componentProps": {},
      "id": "integerCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    null,
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [
        "object",
      ],
      "fields": [
        {
          "component": "Object",
          "componentProps": {},
          "fieldIds": [
            "string",
          ],
          "fields": [
            {
              "component": "String",
              "componentProps": {},
              "id": "string",
              "label": undefined,
              "status": "initial",
              "value": null,
            },
          ],
          "id": "object",
          "label": undefined,
          "message": undefined,
          "status": "error",
          "value": null,
        },
      ],
      "id": "nestedObject",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedDynamicObject",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "submit",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
  ],
  "id": "root",
  "index": 0,
  "status": "error",
}
`;

exports[`core/Engine > validateFields 2`] = `
{
  "fields": [
    {
      "component": "Message",
      "componentProps": {},
      "id": "message",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringRequired",
      "label": undefined,
      "message": undefined,
      "status": "error",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedArray",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Integer",
      "componentProps": {},
      "id": "integerCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    null,
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [
        "object",
      ],
      "fields": [
        {
          "component": "Object",
          "componentProps": {},
          "fieldIds": [
            "string",
          ],
          "fields": [
            {
              "component": "String",
              "componentProps": {},
              "id": "string",
              "label": undefined,
              "status": "initial",
              "value": null,
            },
          ],
          "id": "object",
          "label": undefined,
          "status": "initial",
          "value": null,
        },
      ],
      "id": "nestedObject",
      "label": undefined,
      "message": undefined,
      "status": "success",
      "value": {
        "object": {},
      },
    },
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "nestedDynamicObject",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "submit",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
  ],
  "id": "root",
  "index": 0,
  "status": "error",
}
`;

exports[`core/Engine > validateFields 3`] = `
{
  "fields": [
    {
      "component": "Message",
      "componentProps": {},
      "id": "message",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringRequired",
      "label": undefined,
      "message": undefined,
      "status": "success",
      "value": "ok",
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [
        0,
        1,
        2,
      ],
      "fields": [
        {
          "component": "Null",
          "componentProps": {},
          "fieldIds": [
            0,
            1,
          ],
          "fields": [
            {
              "component": "Null",
              "componentProps": {},
              "id": "0",
              "message": undefined,
              "status": "success",
              "value": "valid",
            },
            {
              "component": "Null",
              "componentProps": {},
              "id": "1",
              "message": "BAD STRING",
              "status": "error",
              "value": "invalid",
            },
          ],
          "id": "0",
          "message": undefined,
          "status": "success",
          "value": [
            "valid",
            "invalid",
          ],
        },
        {
          "component": "Null",
          "componentProps": {},
          "fieldIds": [
            0,
            1,
          ],
          "fields": [
            {
              "component": "Null",
              "componentProps": {},
              "id": "0",
              "message": undefined,
              "status": "success",
              "value": "valid",
            },
            {
              "component": "Null",
              "componentProps": {},
              "id": "1",
              "message": "BAD STRING",
              "status": "error",
              "value": "invalid",
            },
          ],
          "id": "1",
          "message": undefined,
          "status": "success",
          "value": [
            "valid",
            "invalid",
          ],
        },
        {
          "component": "Null",
          "componentProps": {},
          "fieldIds": [
            0,
            1,
          ],
          "fields": [
            {
              "component": "Null",
              "componentProps": {},
              "id": "0",
              "message": undefined,
              "status": "success",
              "value": "valid",
            },
            {
              "component": "Null",
              "componentProps": {},
              "id": "1",
              "message": "BAD STRING",
              "status": "error",
              "value": "invalid",
            },
          ],
          "id": "2",
          "message": undefined,
          "status": "success",
          "value": [
            "valid",
            "invalid",
          ],
        },
      ],
      "id": "nestedArray",
      "label": undefined,
      "message": undefined,
      "status": "success",
      "value": [
        [
          "valid",
          "invalid",
        ],
        [
          "valid",
          "invalid",
        ],
        [
          "valid",
          "invalid",
        ],
      ],
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Integer",
      "componentProps": {},
      "id": "integerCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    null,
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [
        "object",
      ],
      "fields": [
        {
          "component": "Object",
          "componentProps": {},
          "fieldIds": [
            "string",
          ],
          "fields": [
            {
              "component": "String",
              "componentProps": {},
              "id": "string",
              "label": undefined,
              "status": "initial",
              "value": null,
            },
          ],
          "id": "object",
          "label": undefined,
          "message": undefined,
          "status": "error",
          "value": null,
        },
      ],
      "id": "nestedObject",
      "label": undefined,
      "status": "initial",
    },
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [
        "invalid01",
      ],
      "fields": [
        {
          "component": "Null",
          "componentProps": {},
          "fieldIds": [
            "integer",
          ],
          "fields": [
            {
              "component": "Null",
              "componentProps": {},
              "id": "integer",
              "status": "initial",
              "value": 3,
            },
          ],
          "id": "invalid01",
          "status": "initial",
        },
      ],
      "id": "nestedDynamicObject",
      "label": undefined,
      "message": undefined,
      "status": "success",
      "value": {
        "invalid01": 3,
      },
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "submit",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
  ],
  "id": "root",
  "index": 0,
  "status": "success",
}
`;

exports[`core/Engine > validateFields 4`] = `
{
  "fields": [
    {
      "component": "Message",
      "componentProps": {},
      "id": "message",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringRequired",
      "label": undefined,
      "message": undefined,
      "status": "success",
      "value": "ok",
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [
        0,
        1,
        2,
      ],
      "fields": [
        {
          "component": "Null",
          "componentProps": {},
          "fieldIds": [
            0,
            1,
          ],
          "fields": [
            {
              "component": "Null",
              "componentProps": {},
              "id": "0",
              "message": undefined,
              "status": "success",
              "value": "valid",
            },
            {
              "component": "Null",
              "componentProps": {},
              "id": "1",
              "message": undefined,
              "status": "success",
              "value": "valid",
            },
          ],
          "id": "0",
          "message": undefined,
          "status": "success",
          "value": [
            "valid",
            "invalid",
          ],
        },
        {
          "component": "Null",
          "componentProps": {},
          "fieldIds": [
            0,
            1,
          ],
          "fields": [
            {
              "component": "Null",
              "componentProps": {},
              "id": "0",
              "message": undefined,
              "status": "success",
              "value": "valid",
            },
            {
              "component": "Null",
              "componentProps": {},
              "id": "1",
              "message": undefined,
              "status": "success",
              "value": "valid",
            },
          ],
          "id": "1",
          "message": undefined,
          "status": "success",
          "value": [
            "valid",
            "invalid",
          ],
        },
        {
          "component": "Null",
          "componentProps": {},
          "fieldIds": [
            0,
            1,
          ],
          "fields": [
            {
              "component": "Null",
              "componentProps": {},
              "id": "0",
              "message": undefined,
              "status": "success",
              "value": "valid",
            },
            {
              "component": "Null",
              "componentProps": {},
              "id": "1",
              "message": undefined,
              "status": "success",
              "value": "valid",
            },
          ],
          "id": "2",
          "message": undefined,
          "status": "success",
          "value": [
            "valid",
            "invalid",
          ],
        },
      ],
      "id": "nestedArray",
      "label": undefined,
      "message": undefined,
      "status": "success",
      "value": [
        [
          "valid",
          "invalid",
        ],
        [
          "valid",
          "invalid",
        ],
        [
          "valid",
          "invalid",
        ],
      ],
    },
    {
      "component": "String",
      "componentProps": {},
      "id": "stringCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    {
      "component": "Integer",
      "componentProps": {},
      "id": "integerCondition",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
    null,
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [
        "object",
      ],
      "fields": [
        {
          "component": "Object",
          "componentProps": {},
          "fieldIds": [
            "string",
          ],
          "fields": [
            {
              "component": "String",
              "componentProps": {},
              "id": "string",
              "label": undefined,
              "status": "initial",
              "value": null,
            },
          ],
          "id": "object",
          "label": undefined,
          "message": undefined,
          "status": "error",
          "value": null,
        },
      ],
      "id": "nestedObject",
      "label": undefined,
      "status": "initial",
    },
    {
      "component": "Object",
      "componentProps": {},
      "fieldIds": [
        "test",
      ],
      "fields": [
        {
          "component": "Null",
          "componentProps": {},
          "fieldIds": [
            "string",
          ],
          "fields": [
            {
              "component": "Null",
              "componentProps": {},
              "id": "string",
              "status": "initial",
            },
          ],
          "id": "test",
          "status": "initial",
        },
      ],
      "id": "nestedDynamicObject",
      "label": undefined,
      "message": undefined,
      "status": "success",
      "value": {
        "invalid01": 3,
      },
    },
    {
      "component": "Array",
      "componentProps": {},
      "fieldIds": [],
      "fields": [],
      "id": "submit",
      "label": undefined,
      "status": "initial",
      "value": null,
    },
  ],
  "id": "root",
  "index": 0,
  "status": "success",
}
`;

exports[`core/Engine > withFunctions 1`] = `
[
  {
    "component": "Null",
    "componentProps": {
      "onClick": [MockFunction spy],
    },
    "fields": [
      {
        "component": "Null",
        "componentProps": {
          "key": true,
          "onFocus": [MockFunction spy],
        },
        "fields": [
          {
            "component": "Null",
            "componentProps": undefined,
            "fields": [
              {
                "component": "Null",
                "componentProps": {
                  "props": {
                    "onBlur": [MockFunction spy],
                  },
                },
                "id": "0",
                "status": "initial",
              },
            ],
            "id": "__",
            "status": "initial",
          },
          null,
          null,
        ],
        "id": "dynamicObject",
        "status": "initial",
      },
    ],
    "id": "object",
    "status": "initial",
  },
  null,
]
`;

exports[`core/Engine > withoutFunctions 1`] = `
[
  {
    "component": "Null",
    "componentProps": {
      "onClick": [],
    },
    "fields": [
      {
        "component": "Null",
        "componentProps": {
          "key": true,
        },
        "fields": [
          {
            "component": "Null",
            "componentProps": {},
            "fields": [
              {
                "component": "Null",
                "componentProps": {
                  "props": {},
                },
                "id": "0",
                "status": "initial",
              },
            ],
            "id": "__",
            "status": "initial",
          },
          {
            "component": "Null",
            "componentProps": {},
            "id": "000",
            "status": "initial",
          },
          null,
        ],
        "id": "dynamicObject",
        "status": "initial",
      },
    ],
    "id": "object",
    "status": "initial",
  },
  null,
]
`;
